[package]
name = "eNeRGy"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
rayon = "1.7"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[features]
cheap_dragging = []